feat(CarStatus, Cars, Game): CarStatus 를 추가해 자동차의 각 시도마다의 상태를 저장하도록 해라
CarStatus 추가:
- CarStatus 추가에 따른 기존의 Map 사용 방식 삭제
- CarStatus 를 도입해 자동차의 상태를 DTO 로 전달해 캡슐화
- CarStatus 를 이용해 각 시도마다의 상태 스냅샷 저장